# CSC512C-Gamboa-Garcia-Simulation-Project

./: .dockerignore  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
Video Walkthrough/: demo_video_url.txt
backend/: data.py  simulation.py
components/: author_card.py  footer.py  links.py  navbar.py  simulation_card.py  simulation_form.py  stats_card.py
pages/: __init__.py  about.py  home.py  simulations.py
