[project]
name = "csc512c-gamboa-garcia-simulation-project"
version = "0.1.0"
description = "Simulation Project For CSC512C for Group 3 (Garcia, Gamboa)"
authors = [
    {name = "DLSU-Garcia",email = "andre_emmanuel_garcia@dlsu.edu.ph"}
]
readme = "README.md"
requires-python = ">=3.14,<4"
dependencies = [
    "nicegui (>=3.8.0,<4.0.0)",
    "fastapi (>=0.135.1,<0.136.0)"
]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"