[tool.poetry]
name = "csc512c-gamboa-garcia-simulation-project"
version = "0.1.0"
description = "Simulation Project For CSC512C for Group 3 (Garcia, Gamboa)"
authors = [
    "Kimberly Klaire H. Gamboa <kimberly_gamboa@dlsu.edu.ph>",
    "Andre Emmanuel S. Garcia <andre_emmanuel_garcia@dlsu.edu.ph>"
]
readme = "README.md"
repository = "https://github.com/DLSU-Garcia/CSC512C-Gamboa-Garcia-Simulation-Project"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.14,<4"
nicegui = ">=3.8.0,<4.0.0"
fastapi = ">=0.135.1,<0.136.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"